# TitikSinggah

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  requirements.txt
.github/workflows/: deploy.yml
app/: __init__.py
app/config/: __init__.py  web_config.py
app/dto/: __init__.py  location_data.py  web_response.py
app/exception/: __init__.py  ip_location_error.py
app/resources/: __init__.py  location_from_ip.py
app/routes/: __init__.py  location_routes.py
app/service/: __init__.py  ip_service.py
src/: main.rs
src/config/: mod.rs  web_config.rs
src/controller/: location_controller.rs  mod.rs
src/dto/: location_data.rs  mod.rs  web_response.rs
src/error/: ip_location_error.rs  mod.rs
src/service/: ip_service.rs  mod.rs
