[package]
name = "TitikSinggah"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "titiksinggah"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15"
derive_more = "2.0.1"
